--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
